# SCN

./: README.md  pyproject.toml
scn/: app.html  app.py  cameravideostream.py  centroidtracker.py  experiment.py  fps_measure.csv  fps_measure.py  ipcamera.py  main.py  mainV2.py  server.py  serverV2.py  serverV3.py  smart_camera.py  test_open.py  test_toml.py
scn/config/: camera_config.toml  ipcamera_list.txt
scn/measure/: exp1.csv  fps_measure2.csv
scn/model/FaceNet/: recognition.py
scn/model/FaceNet/finetune/: data.pt  finetune.ipynb  noise_generator.py  smileV2.py
scn/model/MobileNetSSD/: detection.py  detectionV2.py
scn/model/OpenPifPaf/: openpifpaf_predict.py
scn/src/: cameravideostream.py  centroidtracker.py  ipcamera.py  smart_camera.py  utils.py
scn/src/model/FaceNet/: recognition.py
scn/src/model/FaceNet/finetune/: data.pt  finetune.ipynb  newuser.py  noise_generator.py  smileV2.py
scn/src/model/FaceNet/finetune/.ipynb_checkpoints/: finetune-checkpoint.ipynb
scn/src/model/FaceReco/: face_detection.py
scn/src/model/MobileNetSSD/: detection.py  detectionV2.py
tests/: test_scn.py
