[tool.poetry]
name = "SCN"
version = "0.1.0"
description = ""
authors = ["Luc Reveyron <luc.reveyron@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
opencv-python = "^4.5.1"
torch = "^1.8.1"
facenet-pytorch = "^2.5.2"
scipy = "^1.6.2"
openpifpaf = "^0.12.8"
matplotlib = "^3.4.1"
toml = "^0.10.2"
fastapi = "^0.64.0"
gunicorn = "^20.1.0"
aiofiles = "^0.6.0"
uvicorn = "^0.13.4"
websockets = "^9.0.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
